# procpp3

./: .gitignore  README.md  clock.cpp  download.sh
backup/chapter02/: cstrings.cpp
c10_code/References/my/: .containers.cpp.swo  containers.cpp
chapter02/: cppstrings.cpp  cstrings.cpp
chapter07/: ctor-initizer.cpp  initializer-list-ctor.cpp
my-experiements/: bits.py  integer_types.cpp  stream_iterator.cpp
my-experiements/c++14/: funcasvariable.cpp  primitive_types.cpp  var_scope_n_init.cpp
my-experiements/c++14/chapter02/: cppstrings.cpp
my-experiements/c++14/chapter10/: CMakeLists.txt  explicit_conversation.cpp  initialize_list.cpp  va_list_example.cpp
my-experiements/c++14/chapter11/: CMakeLists.txt  limit_template_instantions.cpp
my-experiements/c++14/chapter12/: file_streams.cpp  stringstreams.cpp
my-experiements/c++14/chapter14/: boolean_operator.cpp  conversion_operators.cpp  dereferencing_operators.cpp  operator_overloading.cpp
my-experiements/c++14/chapter16/: vector_ex.cpp
my-experiements/c++14/chapter20/: CMakeLists.txt  stream_iterators.cpp
my-experiements/c++17/chapter01/: CMakeLists.txt  basics.cpp  c_style_arrays.cpp  initializer_list.cpp  smart_pointers.cpp  uniform_initialization.cpp
my-experiements/c++17/chapter02/: CMakeLists.txt  c++_string.cpp  c_strings.cpp  charconv_low_level.cpp  string_view.cpp
my-experiements/c++17/chapter07/: CMakeLists.txt  carrays.cpp  pointers.cpp
my-experiements/c++17/chapter08/: CMakeLists.txt  initlist_example.cpp
my-experiements/c++17/chapter10/: CMakeLists.txt  one.cpp  one.h  override_default_args.cpp
my-experiements/c++17/chapter11/: CMakeLists.txt  attributes.cpp  casts.cpp  constexpr_example.cpp  references.cpp
my-experiements/c++17/chapter12/: CMakeLists.txt  Grid.cpp  Grid.h  deduction.cpp  optional_example.cpp
my-experiements/c++17/chapter13/: CMakeLists.txt  file_stream.cpp  input_stream.cpp  output_stream.cpp  read_name.cpp  stream_manipulators.cpp
my-experiements/c++17/chapter14/: bitwise_operators.cpp
my-experiements/c++17/chapter15/: CMakeLists.txt
my-experiements/c++17/chapter17/: CMakeLists.txt  enum_example.cpp  list_example.cpp  queue_example.cpp  vector_ex.cpp
my-experiements/c++17/chapter20/: CMakeLists.txt  duration_ex.cpp
my-experiements/c++17/chapter23-multithreaded-programming/: CMakeLists.txt  atomic_operations.cpp  neighbour_thread_exception.cpp
my-experiements/chapter08/: CMakeLists.txt  datamembers.cpp  nested.cpp
my-experiements/chapter10/: uniform_initialization.cpp
my-experiements/chapter11/: Array.h
my-experiements/chapter12/: CMakeLists.txt  stream_manipulators.cpp  tie_stream.cpp
my-experiements/chapter14/: CMakeLists.txt
my-experiements/chapter16/: CMakeLists.txt
my-experiements/chapter20/: CMakeLists.txt  find_duplicates.cpp
my-experiements/effective-c++/item01/: Makefile  array_arguments.cpp  deduction1.cpp  deduction2.cpp  deduction3.cpp  function_arguments.cpp
my-experiements/effective-c++/item03/: Makefile  authandaccess.cpp  boost_typeid.cpp  check_type_by_error.cpp
my-experiements/effective-c++/item05/: Makefile  auto_simple.cpp
my-experiements/effective-c++/item07/: Makefile  brace_init.cpp
my-experiements/effective-c++/item08/: Makefile  nullptr.cpp
my-experiements/effective-c++/item10/: Makefile  scoped_enum.cpp
my-experiements/effective-c++/item12/: Makefile  fixed_overriding.cpp  refquals.cpp  wrong_overriding.cpp
my-experiements/effective-c++/item13/: Makefile  cbegin.cpp
my-experiements/effective-c++/item18/: CMakeLists.txt  Makefile  unique.cpp
my-experiements/effective-c++/item22/: CMakeLists.txt  backup.Makefile  impl.h  impl1.cpp  impl2.cpp  implapp.cpp  widget.cpp  widget.h
my-experiements/effective-c++/item23/: rvalue.cpp  universal_reference.cpp  uref.cpp
my-experiements/effective-c++/item24/: uref  uref.cpp
my-experiements/effective-c++/item25/: move_4_uref.cpp
my-experiements/effective-c++/item26/: Makefile  perfect_forwarding_ctor.cpp
my-experiements/effective-c++/item33/: CMakeLists.txt  decltype_auto_lambda.cpp
my-experiements/effective-c++/item34/: CMakeLists.txt  setalarm.cpp
my-experiements/elements/c05/: CMakeLists.txt  Makefile  problem_5.0.cpp  problem_5.1.cpp  problem_5.2.cpp
my-experiements/elements/c07/: CMakeLists.txt  palindrom.cpp  singlelist.cpp
my-experiements/mastering-c++17/: CMakeLists.txt  namespaces.cpp
my-experiements/qt5/ex1/: ex1  ex1.pro  main.cpp
